fix: text wrap (again) closes https://git.v0l.io/Kieran/stream/issues/102

--- a/src/element/live-chat.css
+++ b/src/element/live-chat.css
@@ -65,6 +65,7 @@
 
 .live-chat .message {
   word-wrap: break-word;
+  overflow-wrap: anywhere;
   position: relative;
   font-weight: 400;
   font-size: 15px;
